--- a/src/index.scss
+++ b/src/index.scss
@@ -14,7 +14,7 @@ a {
   color: inherit;
 
   &:hover {
-    border-bottom: 1px solid;
+    //border-bottom: 1px solid;
     cursor: pointer;
   }
 }
